[package]
name = "nscn"
version = "0.1.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1", features = ["full", "sync"] }
mongodb = "2.0.0-alpha.1"
redis = { version = "0.20.0", features = ["tokio-comp"] }
serde = "1.0.124"
serde_json = "1.0.64"
log = "0.4.0"
env_logger = "0.8.3"
chrono = "0.4.19"
lazy_static = "1.4.0"
rand = { version = "0.8.3", features = ["small_rng"] }
futures = "0.3.13"
httparse = "1.3.5"
openssl = "0.10.33"
bytes = "1.0.1"
tokio-socks = "0.5.1"
async-trait = "0.1.48"
chrono-tz = "0.5.3"
either = "1.6.1"
regex = "1.4.5"
sysinfo = "0.17.2"
clap = "3.0.0-beta.2"